--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ flask-wtf = "*"
 psycopg2-binary = "*"
 timeloop = "*"
 requests = "*"
+pymongo = "*"
+dnspython = "*"
 
 [dev-packages]
 coverage = "*"
